--- a/PySpark In 15 Minutes.ipynb
+++ b/PySpark In 15 Minutes.ipynb
@@ -19,20 +19,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "ff1i32BfT1Wn"
       },
       "source": [
-        "#@title We have access to Spark through the variable sc\n",
-        "!apt-get update -qq > /dev/null\n",
+        "# innstall java\n",
         "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
-        "!wget -q https://downloads.apache.org/spark/spark-3.2.0/spark-3.2.0-bin-hadoop2.7.tgz\n",
-        "!tar xf spark-3.2.0-bin-hadoop2.7.tgz\n",
-        "!pip install -q findspark\n",
         "\n",
+        "# install spark (change the version number if needed)\n",
+        "!wget -q https://archive.apache.org/dist/spark/spark-3.0.0/spark-3.0.0-bin-hadoop3.2.tgz\n",
+        "\n",
+        "# unzip the spark file to the current folder\n",
+        "!tar xf spark-3.0.0-bin-hadoop3.2.tgz\n",
+        "\n",
+        "# set your spark folder to your system path environment. \n",
         "import os\n",
         "os.environ[\"JAVA_HOME\"] = \"/usr/lib/jvm/java-8-openjdk-amd64\"\n",
-        "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.2.0-bin-hadoop2.7\"\n",
+        "os.environ[\"SPARK_HOME\"] = \"/content/spark-3.0.0-bin-hadoop3.2\"\n",
+        "\n",
+        "# install findspark using pip\n",
+        "!pip install -q findspark\n",
         "\n",
         "import findspark\n",
         "findspark.init()\n",
